--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,14 @@
   <title>Restaurant page</title>
 </head>
 <body>
-  
+  <header id="header">
+    <nav id="nav">
+      <button id="Home">Home</button>
+      <button id="Menu">Menu</button>
+      <button id="About">About</button>
+    </nav>
+  </header>
+  <div id="content">
+  </div>
 </body>
 </html>
